improved code according to pull request feedback